# cargo-whynot

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: main.rs  opts.rs  run.rs  safe.rs  utils.rs  whynot.rs
src/safe/: checker.rs  expr.rs  types.rs  unsafety_visitor.rs
tests/: cli_test.rs
tests/cmd/: help.trycmd
tests/it_works/: Cargo.toml
tests/it_works/src/: lib.rs
tests/readme_example/: Cargo.toml
tests/readme_example/src/: lib.rs
xtask/src/: main.rs
