[package]
name = "cargo-whynot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.12", default-features = false, features = [
    "derive",
    "std",
] }
color-eyre = "0.6.1"
eyre = "0.6.8"
syn-select = "0.2.0"
tracing = "0.1.34"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }

[package.metadata.rust-analyzer]
rustc_private = true

[workspace]
members = [".", "tests/*"]

default-members = ["."]
