[package]
name = "cargo-whynot"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Emilgardis/cargo-whynot"
description = "Cargo subcommand to discover why a function is unsafe"
include = [
    "src/**/*",
    "./Cargo.toml",
    "./LICENSE*",
    "./README.md",
]
categories = ["cargo-subcommand", "cli", "nightly", "unsafe"]

[dependencies]
clap = { version = "3.1.12", default-features = false, features = [
    "derive",
    "std",
] }
color-eyre = "0.6.1"
eyre = "0.6.8"
syn-select = "0.2.0"
tracing = "0.1.34"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
codespan-reporting = { version = "0.11.1" }
codespan = { version = "0.11.1", features = ["serialization"] }
termcolor = "1.1.3"
itertools = "0.10.3"
[package.metadata.rust-analyzer]
rustc_private = true

[workspace]
members = [".", "tests/*"]

default-members = ["."]
