[package]
name = "cargo-whynot"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Emilgardis/cargo-whynot"
description = "Cargo subcommand to discover why a function is unsafe"
include = ["src/**/*", "./Cargo.toml", "./LICENSE*", "./README.md"]
categories = ["cargo-subcommand", "cli", "nightly", "unsafe"]

[[bin]]
name = "whynot"
path = "src/whynot.rs"

[dependencies]
clap = { version = "4.0.18", default-features = false, features = [
    "derive",
    "std",
    "help",
    "usage",
    "suggestions"
] }
color-eyre = "0.6.2"
eyre = "0.6.8"
syn-select = "0.2.1"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
codespan-reporting = { version = "0.11.1" }
codespan = { version = "0.11.1", features = ["serialization"] }
termcolor = "1.1.3"
itertools = "0.10.5"

[dev-dependencies]
trycmd = "0.14.1"

[package.metadata.rust-analyzer]
rustc_private = true

[workspace]
members = ["xtask", "tests/it_works", "tests/readme_example"]
default-members = ["."]
